--- a/wishDream_Web/public/index.html
+++ b/wishDream_Web/public/index.html
@@ -1,14 +1,13 @@
-<!--<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>-->
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title></title>
         <base href="/">
         <!--
-        <script type="text/javascript" src="bootstrap.min.js"></script>
-        <link rel="stylesheet" href="jslib/bootstrap-grid.min.css">
-        <link rel="stylesheet" href="jslib/bootstrap.min.css">-->
+        <script type="text/javascript" th:src="@{jslib/bootstrap.min.js}"></script>
+        <link rel="stylesheet" th:href="@{jslib/bootstrap-grid.min.css}">
+        <link rel="stylesheet" th:href="@{jslib/bootstrap.min.css}">-->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
