--- a/wishDream_Web/public/index.html
+++ b/wishDream_Web/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title></title>
+        <title><%= htmlWebpackPlugin.options.title %></title>
         <base href="/">
         <!--
         <script type="text/javascript" th:src="@{jslib/bootstrap.min.js}"></script>
