--- a/wishDream_Web/public/index.html
+++ b/wishDream_Web/public/index.html
@@ -12,5 +12,6 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        <div>확인겸</div>
     </body>
 </html>
