--- a/wishDream_Web/public/index.html
+++ b/wishDream_Web/public/index.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="_csrf" th:content="${_csrf.token}"/>
-        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+        <meta name="_csrf" th:content="${_csrf_token}"/>
+        <meta name="_csrf_header" th:content="${_csrf_headerName}"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
         <base href="/">
         <!--
