--- a/wishDream_Web/public/login.html
+++ b/wishDream_Web/public/login.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <script type="text/javascript" th:src="@{jslib/kakao.min.js}"></script>
         <title><%= htmlWebpackPlugin.options.title %></title>
         <base href="/login">
         <!--
